Corrected z-index of fact box

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -71,6 +71,7 @@
     .fact-box {
         display: none;
         position: absolute;
+        z-index: 10;
     }
 
     &:hover .fact-box {
